2001-07-05  Daniel Jacobowitz  <drow@mvista.com>

	* mips-tdep.c (mips_software_single_step): New function.
	* config/mips/tm-mips.h: Add prototype for
	mips_software_single_step.

2001-07-05  Daniel Jacobowitz  <drow@mvista.com>

	* ppc-linux-nat.c (supply_gregset): Use elf_greg_t instead
	of greg_t.
	(fill_gregset): Likewise.

2001-07-05  Andrew Cagney  <ac131313@redhat.com>

	* objfiles.c (open_mapped_file): Use lbasename instead of
	basename.

2001-07-05  Jim Blandy  <jimb@redhat.com>

	* d10v-tdep.c (d10v_frame_chain, d10v_frame_init_saved_regs,
	show_regs, d10v_read_pc, d10v_write_pc, d10v_read_sp,
	d10v_write_sp, d10v_write_fp, d10v_read_fp,
	d10v_push_return_address): Call the functions d10v_make_daddr,
	d10v_make_iaddr, d10v_convert_iaddr_to_raw, and
	d10v_convert_daddr_to_raw, not the global macros D10V_MAKE_DADDR,
	D10V_MAKE_IADDR, D10V_CONVERT_IADDR_TO_RAW, and
	D10V_CONVERT_DADDR_TO_RAW.

	* dwarf2read (dwarf2_build_psymtabs_hard): Doc fix.

2001-07-05  Mark Kettenis  <kettenis@gnu.org>

	* config/i386/xm-go32.h (HOST_I386): Removed.
	* config/i386/xm-linux.h (HOST_I386): Removed.

2001-07-04  Mark Kettenis  <kettenis@gnu.org>

	* i387-tdep.c (print_i387_value): Add extra space after final full
	stop in comment.

2001-07-04  Andrew Cagney  <ac131313@redhat.com>

	* TODO (5.1): Update.  Doco changes committed.

2001-06-29  Andrew Cagney  <ac131313@redhat.com>

	* config/arm/tm-arm.h: Include "floatformat.h".

2001-06-29  Andrew Cagney  <ac131313@redhat.com>

	* i387-tdep.c: Include "gdb_assert.h".
	(print_i387_value): Use extract_floating to extract the FP value
	from a zero padded local buffer.

2001-06-28  Andrew Cagney  <ac131313@redhat.com>

	* TODO: Delete all thread items.  The thread code was overhauled.

2001-07-04  Elena Zannoni  <ezannoni@redhat.com>

	* memattr.c (create_mem_region): Move n to next memory region,
	to avoid infinite loop.

	* memattr.h: Add copyright statement.
	* memattr.c: Ditto.

2001-07-04  Jim Blandy  <jimb@redhat.com>
