@@ -1,3 +1,7 @@
+2001-07-04  Andrew Cagney  <ac131313@redhat.com>
+
+	* mi-out.c (mi_ui_out_impl): Initialize is_mi_like_p to one.
+
 2001-06-27  Andrew Cagney  <ac131313@redhat.com>
 
 	* mi-out.c (mi_table_begin): Include nr_cols and nr_rows in mi1
